--- a/src/navbar.html
+++ b/src/navbar.html
@@ -7,14 +7,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&family=Syne:wght@400..800&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="main.js"></script>
   <title>Nina's Portfolio</title>
 </head>
 
 <body>
   <header class="bg-white">
     <div class="border-b border-grey">
-      <nav class="py-6 px-4 md:px-8 md:px-12 flex justify-between items-end mx-auto">
+      <nav class="py-6 px-4 md:px-8 flex justify-between items-end mx-auto">
         <!-- Logo container -->
         <a class="text-2xl flex items-end" href="/">
           <h2 class="whitespace-nowrap">NINA LE</h2>
@@ -34,7 +33,7 @@
 
         <!-- Hamburger Icon for Mobile -->
         <div class="flex items-center gap-6 md:hidden">
-            <img onclick="onToggleMenu(this)" class="h-6 cursor-pointer" src="./public/assets/ham.svg" alt="Menu">
+            <img onclick="onToggleMenu(this)" class="h-6 cursor-pointer" src="/assets/close.svg" alt="Menu">
         </div>
       </nav>
     </div>
