refinements to about, mainly

--- a/src/index.html
+++ b/src/index.html
@@ -29,12 +29,11 @@
     <div class="flex flex-col md:pt-24 flex-1 pr-4 pb-0">
         <h5 class="font-extralight text-[120px] md:text-[236px]">Hey, I'm Nina</h5>
     </div>
-    <div class="flex flex-col md:flex-row w-full justify-between pb-16">
+    <div class="flex flex-col md:flex-row w-full justify-between pb-6">
       <div class="flex flex-col flex-1 md:py-11 gap-8">
-        <h2 class="text-[24px] md:text-[36px]">I'm a data-driven digital designer with 3 years of industry experience.</h2>
-        <h3 class="text-[18px] md:text-[24px]">*and a dessert fanatic</h3>
+        <h2 class="text-[24px] md:text-[36px] ">I'm a data-driven digital designer with 3 years of industry experience.</h2>
       </div>
-      <div class="flex justify-end items-center pr-4">
+      <div class="flex justify-end items-center">
         <!-- Adjusted image and color as needed -->
         <div class="cursor">
           <span class="cursor-text">About Me</span>
@@ -43,27 +42,59 @@
         <img src="/assets/musi.png" class="hover-image" alt="Music Icon">
       </div>
     </div>
-
-
   </section>
   
-   
-      <div class="py-8 h1 pb-12 flex flex-col md:flex-row md:pr-16 gap-12">
-          <div class="w-full md:w-36 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-blob grow-0">
-              <h2 class=" text-white text-center pb-1">UXUI</h2>
+  
+
+ <section class="carousel-container relative w-full py-2 pb-3 text-black border-black border overflow-hidden">
+  <div class="carousel flex items-center gap-3 animate-scroll whitespace-nowrap">
+    <h2>EXOMIS+DEVELOPMENT</h2>
+    <span><h2>3!@#%</h2></span>
+    <h2>YORK UNIVERSITY</h2>
+    <span><h2>4$#@!</h2></span>
+    <h2>WINGED CANVAS</h2>
+    <span><h2>?2&%</h2></span>
+    <h2>GOODSELF</h2>
+    <span><h2>*@&^#</h2></span>
+
+    <h2>EXOMIS+DEVELOPMENT</h2>
+    <span><h2>3!@#%</h2></span>
+    <h2>YORK UNIVERSITY</h2>
+    <span><h2>4$#@!</h2></span>
+    <h2>WINGED CANVAS</h2>
+    <span><h2>?2&%</h2></span>
+    <h2>GOODSELF</h2>
+    <span><h2>*@&^#</h2></span>
+
+    <h2>EXOMIS+DEVELOPMENT</h2>
+    <span><h2>3!@#%</h2></span>
+    <h2>YORK UNIVERSITY</h2>
+    <span><h2>4$#@!</h2></span>
+    <h2>WINGED CANVAS</h2>
+    <span><h2>?2&%</h2></span>
+    <h2>GOODSELF</h2>
+    <span><h2>*@&^#</h2></span>
+
+</section>
+
+  
+  <section class="pt-6">
+      <div class="py-8 h1 pb-12 flex flex-col md:flex-row md:pr-16 gap-12 px-4 md:px-0">
+          <div class="pb-2 w-full md:w-36 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 border-double border-4 border-blue-500 grow-0 border">
+              <h1 class= " text-blue-500 text-center pb-1">uxui</h1>
           </div>   
           <div class="grid grid-cols-none md:grid-cols-2 flex-1 cards-section"> 
           </div>
       </div>
-      
-      <div class="py-8 flex flex-col md:flex-row border-b border-grey md:pr-12 gap-12">
-          <div class="w-full md:w-36 rounded-full pb-1 rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-gree grow-0">
-              <h2 class=" text-white text-center">DESIGN</h2>
+      <div class="py-8 flex flex-col md:flex-row border-b border-grey md:pr-12 gap-12 px-4 md:px-0">
+          <div class="w-full md:w-36 rounded-full pb-3 rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 border-double border-4 border-pink-500 grow-0">
+              <h1 class="text-pink-500 text-center">design</h1>
           </div>   
           <div class="grid grid-cols-1 md:grid-cols-2 flex-1 cards-section2"> 
           </div>
       </div>
-      
+</section>
+
       <section class="flex flex-col md:flex-row py-6 md:py-20 gap-6 flex-1">
         <div class="flex flex-col gap-9 px-4 md:px-12">
             <h1>Let's start a conversation!</h1>
