--- a/src/footer.html
+++ b/src/footer.html
@@ -7,21 +7,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&family=Syne:wght@400..800&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
 <body>
-    <footer class="normal-section py-2 bg-beige flex items-center justify-between">
+    <footer class="normal-section py-2 border-black border-t flex items-center justify-between">
         <p class="font-medium">©2024, Designed and Coded by Nina Le</p>
-        <div class="flex gap-3">
-            <span class="flex items-center justify-center h-10 w-10 border rounded-lg border-[#d7ccc6]">
-                <h4 class="font-medium"><a class="href=https://www.apple.com/">LI</a></h4></li>
-            </span>
-            <span class="flex items-center justify-center h-10 w-10 border rounded-lg border-[#d7ccc6]">
-                <h4 class="font-medium"><a class="href=https://www.apple.com/">IG</a></h4></li>
-            </span>
-            <span class="flex items-center justify-center h-10 w-10 border rounded-lg border-[#d7ccc6]">
-                <h4 class="font-medium"><a class="href=https://www.apple.com/">BE</a></h4></li>
-            </span>   
+        <div class="flex gap-3 justify-center items-center">
+                <span class="flex items-center justify-center w-10 h-10 bg-blue-600 rounded-full">
+                    <i class="fa-brands fa-linkedin-in text-2xl" style="color: #ffffff;"></i>
+                </span>
+                <span class="flex items-center justify-center w-10 h-10 bg-pink-600 rounded-full">
+                    <i class="fa-brands fa-instagram text-2xl" style="color: #ffffff;"></i>
+                </span>
+                <span class="flex items-center justify-center w-10 h-10 bg-black rounded-full">
+                    <i class="fa-brands fa-behance text-2xl" style="color: #ffffff;"></i>
+                </span>            
+        </div>
         </footer>
 </body>
 </html>
