--- a/src/index.html
+++ b/src/index.html
@@ -18,28 +18,30 @@
         <nav class="py-6 px-4 md:px-8 flex justify-between items-end mx-auto">
           <!-- Logo container -->
           <a class="text-2xl flex items-end" href="/">
-            <h2 class="whitespace-nowrap">NINA LE</h2>
+            <h2 class="whitespace-nowrap"><NINA LE></h2>
           </a> <!-- Adjust height and color as needed -->
         </nav>
       </div>
     </div>
   </header>
   
-  <section class="px-4 md:px-16">
-    <div class="flex flex-col md:pt-24 flex-1 pr-4 pb-0">
-        <h5 class="font-extralight text-[120px] md:text-[236px]">Hey, I'm Nina</h5>
+  <section class="px-4 md:px-0 md:pl-12">
+    <div class="flex flex-col md:pt-16 flex-1 pr-4 pb-8">
+        <h5 class="font-extralight text-[120px] md:text-[160px]">Hi, I'm Nina</h5>
     </div>
     <div class="flex flex-col md:flex-row w-full justify-between pb-6">
-      <div class="flex flex-col flex-1 md:py-11 gap-8">
-        <h2 class="text-[24px] md:text-[36px] ">I'm a data-driven digital designer with 3 years of industry experience.</h2>
+      <div class="flex flex-col flex-1 md:py-0 gap-8">
+        <h3>I’m a digital designer with a focus in product and visual design. I look for ways to make things just right while aligning design with real-world needs.</h3>
+        <h4>*When I'm not designing, I find inspiration in music, fashion, and the world around me! ʕ •̀ o •́ ʔ	</h4>
+
       </div>
       <div class="flex justify-end items-center">
         <!-- Adjusted image and color as needed -->
         <div class="cursor">
-          <span class="cursor-text">About Me</span>
+          <span class="cursor-text">About me</span>
         </div>
         <div class="cursor-follower"></div>
-        <img src="/assets/musi.png" class="hover-image" alt="Music Icon">
+        <img src="/assets/musi.png" class="hover-image w-auto h-60" alt="Music Icon">
       </div>
     </div>
   </section>
@@ -76,23 +78,31 @@
     <span><h2>*@&^#</h2></span>
 
 </section>
-
   
   <section class="pt-6">
       <div class="py-8 h1 pb-12 flex flex-col md:flex-row md:pr-16 gap-12 px-4 md:px-0">
-          <div class="pb-2 w-full md:w-36 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 border-double border-4 border-blue-500 grow-0 border">
-              <h1 class= " text-blue-500 text-center pb-1">uxui</h1>
+          <div class="pb-2 w-full md:w-36 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 border border-2 border-grey grow-0 border">
+              <h1 class= " text-grey text-center pb-1">ux%&</h1>
           </div>   
           <div class="grid grid-cols-none md:grid-cols-2 flex-1 cards-section"> 
           </div>
       </div>
+      <div class="py-8 flex flex-col md:flex-row md:pr-12 gap-12 px-4 md:px-0">
+        <div class="w-full md:w-36 rounded-full pb-3 rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 border border-2 border-grey grow-0">
+            <h1 class="text-grey text-center">&*ui</h1>
+        </div>   
+        <div class="grid grid-cols-1 md:grid-cols-2 flex-1 cards-section3"> 
+        </div>
+    </div>
       <div class="py-8 flex flex-col md:flex-row border-b border-grey md:pr-12 gap-12 px-4 md:px-0">
-          <div class="w-full md:w-36 rounded-full pb-3 rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 border-double border-4 border-pink-500 grow-0">
-              <h1 class="text-pink-500 text-center">design</h1>
+          <div class="w-full md:w-36 rounded-full pb-3 rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 border border-2 border-grey grow-0">
+              <h1 class="text-grey text-center">desn@</h1>
           </div>   
           <div class="grid grid-cols-1 md:grid-cols-2 flex-1 cards-section2"> 
           </div>
       </div>
+   
+      
 </section>
 
       <section class="flex flex-col md:flex-row py-6 md:py-20 gap-6 flex-1">
