--- a/src/navbar.html
+++ b/src/navbar.html
@@ -16,7 +16,7 @@
       <nav class="py-6 px-4 md:px-8 flex justify-between items-end mx-auto">
         <!-- Logo container -->
         <a class="text-2xl flex items-end" href="/">
-          <h2 class="whitespace-nowrap">NINA LE</h2>
+          <h2 class="whitespace-nowrap"><img src="/assets/name.png" class="w-60 h-auto"></h2>
         </a>
 
         <!-- Right-aligned nav links container -->
