basic changes to icons

--- a/src/footer.html
+++ b/src/footer.html
@@ -22,7 +22,12 @@
                 </span>
                 <span class="flex items-center justify-center w-10 h-10 bg-black rounded-full">
                     <i class="fa-brands fa-behance text-2xl" style="color: #ffffff;"></i>
-                </span>            
+                </span>   
+                <span class="flex items-center justify-center w-10 h-10 bg-[#16A59D] rounded-full">
+                  <i class="fa-solid fa-envelope text-2xl" style="color: #ffffff;"></i>
+
+              </span>               
+
         </div>
         </footer>
 </body>
