--- a/src/index.html
+++ b/src/index.html
@@ -13,17 +13,12 @@
 
 <body>
   <header id="navbar">
-    <div id="navbar-placeholder" class="bg-white">
-      <div class="border-b border-grey">
-        <nav class="py-6 px-4 md:px-8 flex justify-between items-end mx-auto">
-          <!-- Logo container -->
-          <a class="text-2xl flex items-end" href="/">
-            <h2 class="whitespace-nowrap"><NINA LE></h2>
-          </a> <!-- Adjust height and color as needed -->
+    <div class="border-b border-grey">
+      <nav class="py-6 px-4 md:px-8 flex justify-between items-center mx-auto h-24">
+
         </nav>
-      </div>
     </div>
-  </header>
+</header>
   
   <section class="px-4 md:px-0 md:pl-12">
     <div class="flex flex-col md:pt-16 flex-1 pr-4 pb-8">
@@ -41,7 +36,7 @@
           <span class="cursor-text">About me</span>
         </div>
         <div class="cursor-follower"></div>
-        <img src="/assets/musi.png" class="hover-image w-auto h-60" alt="Music Icon">
+        <img src="/assets/musi.png" class="hover-image w-auto h-48 md:h-60" alt="Music Icon">
       </div>
     </div>
   </section>
@@ -80,28 +75,28 @@
 </section>
   
   <section class="pt-6">
-      <div class="py-8 h1 pb-12 flex flex-col md:flex-row md:pr-16 gap-12 px-4 md:px-0">
-          <div class="pb-2 w-full md:w-36 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 border border-2 border-grey grow-0 border">
-              <h1 class= " text-grey text-center pb-1">ux%&</h1>
+      <div class="py-8 h1 pb-12 flex flex-col md:flex-row md:pr-16 gap-12 md:gap-20 px-4 md:px-0">
+          <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 border border-2 border-grey grow-0 border">
+              <h1 class= " text-grey text-center pb-1">uxui</h1>
           </div>   
           <div class="grid grid-cols-none md:grid-cols-2 flex-1 cards-section"> 
           </div>
       </div>
       <div class="py-8 flex flex-col md:flex-row md:pr-12 gap-12 px-4 md:px-0">
         <div class="w-full md:w-36 rounded-full pb-3 rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 border border-2 border-grey grow-0">
-            <h1 class="text-grey text-center">&*ui</h1>
+            <h1 class="text-grey text-center">motion</h1>
         </div>   
         <div class="grid grid-cols-1 md:grid-cols-2 flex-1 cards-section3"> 
         </div>
+   
     </div>
       <div class="py-8 flex flex-col md:flex-row border-b border-grey md:pr-12 gap-12 px-4 md:px-0">
           <div class="w-full md:w-36 rounded-full pb-3 rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 border border-2 border-grey grow-0">
-              <h1 class="text-grey text-center">desn@</h1>
+              <h1 class="text-grey text-center">design</h1>
           </div>   
           <div class="grid grid-cols-1 md:grid-cols-2 flex-1 cards-section2"> 
           </div>
       </div>
-   
       
 </section>
 
@@ -111,15 +106,15 @@
             <h4>See something that caught your eye? Get in touch, I'd love to discuss and explore new challenges and opportunities!</h4>
         </div>
         <div class="w-full">
-            <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blue-400 hover:font-semibold cursor-pointer">
+            <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer">
                 <h4>About</h4>
                 <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
             </div>
-            <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between">
+            <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500">
                 <h4>Resume</h4>
                 <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
             </div>
-            <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between">
+            <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500">
                 <h4>Archive</h4>
                 <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
             </div>
