--- a/src/about.html
+++ b/src/about.html
@@ -13,18 +13,18 @@
       </head>
 <body>
   <header id="navbar">
-    <div id="navbar-placeholder" class="bg-white">
-      <div class="border-b border-grey">
-        <nav class="py-6 px-4 md:px-8 flex justify-between items-end mx-auto">
-          <!-- Logo container -->
-          <a class="text-2xl flex items-end" href="/">
-            <h2 class="whitespace-nowrap">NINA LE</h2>
-          </a> <!-- Adjust height and color as needed -->
-        </nav>
-      </div>
+        <div class="border-b border-grey">
+          <nav class="py-6 px-4 md:px-8 flex justify-between items-center mx-auto h-24">
+            </nav>
+        </div>
+</header>
+
+    <div class="cursor">
+      <div class="cursor-follower"></div></div>
+
     </div>
-  </header>
-    
+</div>
+
   <section class="flex flex-col md:flex-row py-6 md:py-20 gap-6 flex-1">
     <div class="flex flex-col gap-9 px-4 md:px-12">
             <h1>Nice to meet you!</h1>
@@ -54,6 +54,8 @@
         
         <footer id="footer"></footer>
         <script type="module" src="module.js"></script>
+        <script type="module" src="cursor.js"></script>
+
 
 </body>
 </html>
