--- a/src/navbar.html
+++ b/src/navbar.html
@@ -13,19 +13,16 @@
 <body>
   <header class="bg-white">
     <div class="border-b border-grey">
-      <nav class="py-6 px-4 md:px-8 flex justify-between items-end mx-auto">
+      <nav class="py-6 px-4 md:px-8 flex justify-between items-center mx-auto h-24">
         <!-- Logo container -->
         <a class="text-2xl flex items-end" href="/">
-          <h2 class="whitespace-nowrap"><img src="/assets/name.png" class="w-60 h-auto"></h2>
+          <h2 class="whitespace-nowrap"><img src="/assets/name.svg" class="h-14 md:h-20"></h2>
         </a>
 
         <!-- Right-aligned nav links container -->
         <div class="bg-white border-b border-grey px-4 md:border-none nav-links md:static absolute md:min-h-fit min-h-[30vh] left-0 top-[13%] md:top-0 w-full flex md:justify-end">
           <ul class="flex md:flex-row flex-col md:gap-[4vw] gap-8 font-medium py-6 md:py-0">
-            <li class="flex gap-2 items-center">
-              <h4><a class="font-medium hover:text-blob duration-500" href="index.html">Projects</a></h4>
-              <p class="font-medium">(8)</p>
-            </li>
+            <li class="flex gap-2 items-center"><h4><a class="font-medium hover:text-blob duration-500" href="index.html">Projects</a></h4></li>
             <li><h4><a class="font-medium hover:text-blob duration-500" href="about.html">About</a></h4></li>
             <li><h4><a class="font-medium hover:text-blob duration-500" href="#">Contact</a></h4></li>
           </ul>
