changes to about

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,7 @@
 <body>
   <header id="navbar">
     <div class="border-b border-grey">
-      <nav class="py-6 px-4 md:px-8 flex justify-between items-center mx-auto h-24">
-
-        </nav>
+      <nav class="py-6 px-4 md:px-8 flex justify-between items-center mx-auto h-24"></nav>
     </div>
 </header>
   
@@ -36,7 +34,7 @@
           <span class="cursor-text">About me</span>
         </div>
         <div class="cursor-follower"></div>
-        <img src="/assets/musi.png" class="hover-image w-auto h-48 md:h-60" alt="Music Icon">
+        <img src="/assets/musi.png" class="hover-image w-auto h-48 lg:h-60" alt="Music Icon">
       </div>
     </div>
   </section>
