--- a/src/navbar.html
+++ b/src/navbar.html
@@ -30,7 +30,7 @@
 
         <!-- Hamburger Icon for Mobile -->
         <div class="flex items-center gap-6 md:hidden">
-            <img onclick="onToggleMenu(this)" class="h-6 cursor-pointer" src="/assets/close.svg" alt="Menu">
+            <img onclick="onToggleMenu(this)" class="h-6 cursor-pointer" src="/assets/ham.svg" alt="Menu">
         </div>
       </nav>
     </div>
