--- a/src/about.html
+++ b/src/about.html
@@ -37,8 +37,8 @@
           I’m passionate about creating thoughtful, inclusive solutions that optimize feasibility, viability, and desirability for current or future features. 
           Whether working on UX/UI or experimental projects, I love diving into research and collaborating with cross-functional teams to craft experiences that truly cater to the user.
           <br><br>
-          My attention to detail—shaped by years in choir and traditional/digital illustration—fuels my approach to design. 
-          Combined with my industry experience, this foundation drives my focus on accessibility, precision, and creating work that feels both engaging and impactful.
+          My attention to detail—shaped by years practicing music and illustration—fuels my approach to design. 
+          Combined with my industry experience, this foundation drives my focus on accessibility, precision, and creating work that feels impactful.
         </h4>
       </div>
       <button class="rounded-full px-16 py-2 border-2 border-grey hover:bg-gray-100 transition">
@@ -53,38 +53,37 @@
     <!-- Right Content Section -->
     <div class="flex flex-col gap-8 p-3">
       <div>
-        <p class="pb-6">My Design Values</p>
-        <p>Responsible Design</p>
+        <h3 class="pb-6">My Design Values</h3>
+        <p>Responsible design</p>
         <p>
-          Applying human-centered design principles to decision-making, ensuring solutions are ethical, 
-          inclusive, and considerate of their impact on all stakeholders. Prioritizing accessibility, equity, 
+          Applying human-centered design principles to decision-making. Ensuring solutions are ethical, 
+          inclusive, and considerate of their impact on all stakeholders.
+        </p>
+      </div>
+      <div>
+        <p>Play where needed</p>
+        <p>
+          Crafting designs that balance delight and usability. Aligning with trends without compromising the functionality or user flow.
+        </p>
+      </div>
+      <div>
+        <p>Precision and infrastructure</p>
+        <p>
+          Combining micro-interactions, hierarchy, and attention to detail so experiences feel effortless yet intentional, while
+          focusing on your iterations to ensure designs are grounded from research and user feedback to deliver the best results. Prioritizing accessibility, equity, 
           and sustainability while aligning with broader business goals.
-        </p>
-      </div>
-      <div>
-        <p>Fanciful Utility</p>
-        <p>
-          Crafting designs that balance delight and usability, integrating meaningful embellishments to enhance aesthetic usability 
-          without compromising the functionality or user flow—like creating a seamless rhythm that captivates and guides the user.
-        </p>
-      </div>
-      <div>
-        <p>Precision in Intuition</p>
-        <p>
-          Combining micro-interactions, hierarchy, and meticulous attention to detail to craft intuitive experiences that feel effortless yet intentional. 
-          Focusing on iterative design to ensure designs evolve based on research and user feedback while delivering exceptional consistency and usability.
         </p>
       </div>
     </div>
        <!-- Left Content Section -->
        <div class="flex justify-center items-center pr-4">
-        <img src="/assets/dog.png" alt="Illustration of a dog" class="w-8 h-auto">
+        <img src="/assets/frog.png" alt="Illustration of a frog" class="w-8 h-auto">
       </div>
   </section>
   
   <section class="flex flex-col py-8 px-4 md:px-8 gap-3 border-t border-grey">
     <h3>My Interests</h3>
-    <p>
+    <p class="width">
       - Outside of work, catch me lavishing in girly fancy things like afternoon tea, music boxes, ballet, aquariums, and lolita dresses.<br>
       - I am a mezzo-soprano singer, and I especially love singing to rock and alternative songs with heavy belts and strong choruses.<br>
       - I have an interest in pursuing many hobbies in the future, including coding and sculpting clay figurines!
