archive and about

--- a/src/about.html
+++ b/src/about.html
@@ -21,18 +21,17 @@
   <div class="cursor"></div>
   <div class="cursor-follower"></div>
 
-
   <section class="flex flex-col md:flex-row py-8 px-4 md:px-8 gap-8">
-      
     <!-- Right Image Section -->
-    <div class="flex justify-center items-center">
-      <img src="/assets/profile.jpeg" alt="Profile picture of Nina Le" class="rounded-2xl w-full max-w-md">
+    <div class="flex-auto md:w-2/3 lg:w-3/4">
+      <img src="/assets/profile.png" alt="Profile picture of Nina Le" 
+           class="rounded-2xl w-full h-full object-cover">
     </div>
     <!-- Left Content Section -->
-    <div class="flex flex-col gap-8">
+    <div class="flex flex-col gap-8 md:w-1/3 lg:w-1/4">
       <div>
-        <h1 class="pb-8">Nice to meet you!</h1>
-        <h4>
+        <h2 class="pb-8">Nice to meet you!</h2>
+        <h4 class="w-full">
           I’m Nina Le (She/Her), a third-year design student at York University and a UX/UI designer pursuing an Honours Bachelor of Design. 
           I’m passionate about creating thoughtful, inclusive solutions that optimize feasibility, viability, and desirability for current or future features. 
           Whether working on UX/UI or experimental projects, I love diving into research and collaborating with cross-functional teams to craft experiences that truly cater to the user.
@@ -45,14 +44,15 @@
         <h4>Open Resume</h4>
       </button>
     </div>
-
   </section>
+  
+  
   
   <section class="flex flex-col md:flex-row py-8 px-4 md:px-8 gap-8 border-t border-grey">
 
     <!-- Right Content Section -->
-    <div class="flex flex-col gap-8 p-3">
-      <div>
+    <div class="flex flex-col gap-8 p-4 border-2 border-grey rounded-2xl">
+      <div class>
         <h3 class="pb-6">My Design Values</h3>
         <p>Responsible design</p>
         <p>
