--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
           <span class="cursor-text">About me</span>
         </div>
         <div class="cursor-follower"></div>
-        <img src="/assets/musi.png" class="hover-image w-auto h-48 lg:h-60" alt="Music Icon">
+        <a href="about.html"><img src="/assets/musi.png" class="hover-image w-auto h-48 lg:h-60" alt="Music Icon"></a>
       </div>
     </div>
   </section>
@@ -104,18 +104,26 @@
             <h4>See something that caught your eye? Get in touch, I'd love to discuss and explore new challenges and opportunities!</h4>
         </div>
         <div class="w-full">
+          <a href="#">
+            <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500">
+              <h4>Resume</h4>
+              <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
+          </div>
+          </a>
+          <a href="about.html">
             <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer">
-                <h4>About</h4>
-                <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
+              <h4>About</h4>
+              <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
+          </div>
+        </a>
+
+        <a href="archive.html">
+          <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500">
+            <h4>Archive</h4>
+              <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
             </div>
-            <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500">
-                <h4>Resume</h4>
-                <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
-            </div>
-            <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500">
-                <h4>Archive</h4>
-                <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
-            </div>
+        </a>
+
         </div>
       </section>
       <footer id="footer"></footer>
