--- a/src/navbar.html
+++ b/src/navbar.html
@@ -24,7 +24,7 @@
           <ul class="flex md:flex-row flex-col md:gap-[4vw] gap-8 font-medium py-6 md:py-0">
             <li class="flex gap-2 items-center"><h4><a class="font-medium hover:text-blob duration-500" href="index.html">Projects</a></h4></li>
             <li><h4><a class="font-medium hover:text-blob duration-500" href="about.html">About</a></h4></li>
-            <li><h4><a class="font-medium hover:text-blob duration-500" href="#">Contact</a></h4></li>
+            <li><h4><a class="font-medium hover:text-blob duration-500" href="archive.html">Archive</a></h4></li>
           </ul>
         </div>
 
