--- a/src/footer.html
+++ b/src/footer.html
@@ -14,16 +14,18 @@
     <footer class="normal-section py-2 border-black border-t flex items-center justify-between">
         <p class="font-medium">©2024, Designed and Coded by Nina Le</p>
         <div class="flex gap-3 justify-center items-center">
-                <span class="flex items-center justify-center w-10 h-10 bg-blue-600 rounded-full">
+
+                  <a class="flex items-center justify-center w-10 h-10 bg-blue-600 rounded-full hover:bg-blue-400" href="https://www.linkedin.com/in/ninale65/"  target="_blank">
                     <i class="fa-brands fa-linkedin-in text-2xl" style="color: #ffffff;"></i>
-                </span>
-                <span class="flex items-center justify-center w-10 h-10 bg-pink-600 rounded-full">
-                    <i class="fa-brands fa-instagram text-2xl" style="color: #ffffff;"></i>
-                </span>
-                <span class="flex items-center justify-center w-10 h-10 bg-black rounded-full">
+                  </a>
+
+                <a class="flex items-center justify-center w-10 h-10 bg-pink-600 hover:bg-pink-400 rounded-full"  href="https://www.instagram.com/ninmedias/"  target="_blank">
+                  <i class="fa-brands fa-instagram text-2xl" style="color: #ffffff;"></i>
+            </a>
+                <a class="flex items-center justify-center w-10 h-10 bg-grey hover:bg-slate-500 rounded-full" href="https://www.behance.net/ninale1" target="_blank">
                     <i class="fa-brands fa-behance text-2xl" style="color: #ffffff;"></i>
-                </span>   
-                <span class="flex items-center justify-center w-10 h-10 bg-[#16A59D] rounded-full">
+                </a>   
+                <span class="flex items-center justify-center w-10 h-10 bg-[#16A59D] hover:bg-teal-400 rounded-full">
                   <i class="fa-solid fa-envelope text-2xl" style="color: #ffffff;"></i>
 
               </span>               
