moving the awards section

--- a/src/index.html
+++ b/src/index.html
@@ -24,13 +24,13 @@
     </div>
     <div class="flex flex-col md:flex-row w-full justify-between pb-6">
       <div class="flex flex-col flex-1 md:py-0 gap-8">
-        <h3>I’m a digital designer with a focus in product and visual design. I look for ways to make things just right while aligning design with real-world needs.</h3>
+        <h3>As a product and visual designer, I look for ways to make things just right while aligning design with real-world needs.</h3>
         <h4>*When I'm not designing, I find inspiration in music, fashion, and the world around me! ʕ •̀ o •́ ʔ	</h4>
-
       </div>
       <div class="flex justify-end items-center">
         <!-- cursor -->
         <div class="cursor">
+          <span class="cursor-text">About me</span>
         </div>
         <div class="cursor-follower"></div>
         <a href="about.html"><img src="/assets/musi.png" class="hover-image w-auto h-48 lg:h-60" alt="Music Icon"></a>
@@ -75,23 +75,23 @@
   
   <section class="pt-6">
       <div class="py-8 h1 pb-12 flex flex-col md:flex-row md:pr-16 gap-12 md:gap-20 px-4 md:px-0">
-          <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 border border-2 border-grey grow-0 border">
-              <h1 class= " text-grey text-center pb-1">uxui</h1>
+          <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-blob grow-0 border">
+              <h1 class= " text-white text-center pb-1">uxui</h1>
           </div>   
           <div class="grid grid-cols-none md:grid-cols-2 flex-1 cards-section"> 
           </div>
       </div>
       <div class="py-8 flex flex-col md:flex-row md:pr-12 gap-12 px-4 md:px-0">
-        <div class="w-full md:w-36 rounded-full pb-3 rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 border border-2 border-grey grow-0">
-            <h1 class="text-grey text-center">motion</h1>
+        <div class="w-full md:w-36 rounded-full pb-3 rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0  bg-lime-600 grow-0">
+            <h1 class="text-white text-center">motion</h1>
         </div>   
         <div class="grid grid-cols-1 md:grid-cols-2 flex-1 cards-section3"> 
         </div>
    
     </div>
       <div class="py-8 flex flex-col md:flex-row border-b border-grey md:pr-12 gap-12 px-4 md:px-0">
-          <div class="w-full md:w-36 rounded-full pb-3 rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 border border-2 border-grey grow-0">
-              <h1 class="text-grey text-center">design</h1>
+          <div class="w-full md:w-36 rounded-full pb-3 rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#f30559] grow-0">
+              <h1 class="text-white text-center">design</h1>
           </div>   
           <div class="grid grid-cols-1 md:grid-cols-2 flex-1 cards-section2"> 
           </div>
@@ -99,10 +99,15 @@
       
 </section>
 
-      <section class="flex flex-col md:flex-row py-6 md:py-20 gap-6 flex-1">
+<section class="py-8 md:px-12 flex flex-col px-4 gap-3 border-b border-grey">
+  <h1>Recognition</h1>
+  <div class="awards-section"></div>
+</section>
+
+      <section class="flex flex-col md:flex-row py-6 md:py-12 gap-6 flex-1">
         <div class="flex flex-col gap-9 px-4 md:px-12">
-            <h1>Let's start a conversation!</h1>
-            <h4>See something that caught your eye? Get in touch, I'd love to discuss and explore new challenges and opportunities!</h4>
+            <h1>Let's Chat</h1>
+            <h4>See something that caught your eye? I’d be happy to collaborate and discuss new opportunities together!</h4>
         </div>
         <div class="w-full">
           
@@ -122,7 +127,7 @@
         </a>
 
         <a href="archive.html">
-          <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500">
+          <div class=" p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500">
             <h4>Archive</h4>
               <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
             </div>
@@ -132,6 +137,7 @@
       </section>
       <footer id="footer"></footer>
       <script type="module" src="main.js"></script>
+      <script type="module" src="awards.js"></script>
       <script type="module" src="module.js"></script>
       <script src="cursor.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
