--- a/src/about.html
+++ b/src/about.html
@@ -32,9 +32,9 @@
       <div>
         <h1 class="pb-8">Nice to meet you!</h1>
         <h4>
-          I’m Nina Le (She/Her), a third-year design student at York University and a UX/UI designer pursuing an Honours Bachelor of Design. 
+          I’m Nina Le (She/Her), a product designer and third-year design student at York University's Honours Bachelor of Design program 𖹭 
           I’m passionate about creating thoughtful, inclusive solutions that optimize feasibility, viability, and desirability for current or future features. 
-          Whether working on UX/UI or experimental projects, I love diving into research and collaborating with cross-functional teams to craft experiences that truly cater to the user.
+          Whether working on UX/UI or experimental projects, I love diving into research and collaborating with cross-functional teams to craft experiences that cater to the user.
           <br><br>
           My attention to detail—shaped by years practicing music and illustration—fuels my approach to design. 
           Combined with my industry experience, this foundation drives my focus on accessibility, precision, and creating work that feels impactful.
@@ -47,10 +47,7 @@
   </section>
 
   
-  <section class="py-8 md:px-8 flex flex-col px-4 gap-3 border-t border-grey">
-    <h2>Recognition</h2>
-    <div class="awards-section"></div>
-  </section>
+
   <section class="flex flex-col py-8 px-4 md:px-8 gap-3 border-t border-grey">
     
     <div class="grid grid-cols-2 gap-4 items-center md:flex md:gap-4">
@@ -77,9 +74,9 @@
     
     <h2 class="pt-4">My Pursuits</h2>
       <h4 class="width">
-        - Outside of work, catch me lavishing in fancy things like afternoon tea, music boxes, ballet, aquariums, and lolita dresses.<br>
-        - I am a mezzo-soprano singer, and I especially love singing to rock and alternative songs with heavy belts and strong choruses.<br>
-        - I have an interest in pursuing many hobbies! I recently started coding with HTML, CSS/Tailwind, and javascript and been sculpting clay figurines (I sculpted the froggie)
+        - Outside of work, catch me lavishing in fancy things like afternoon tea, music boxes, ballet, aquariums, and lolita dresses<br>
+        - I am a mezzo-soprano singer, and I especially love singing to rock and alternative songs with heavy belts and strong choruses<br>
+        - I have an interest in pursuing many hobbies! I recently started coding with HTML, CSS/Tailwind, and some Javascript - I also been sculpting mini clay figurines (I sculpted the froggies)
       </h4>
     </section>
 
