--- a/src/footer.html
+++ b/src/footer.html
@@ -13,7 +13,7 @@
 <body>
     <footer class="normal-section py-2 border-black border-t flex items-center justify-between">
         <p class="font-medium">©2024, Designed and Coded by Nina Le</p>
-        <div class="flex gap-3 justify-center items-center">
+        <div class="flex gap-3 justify-center items-center md:justify-end md:pr-6">
 
                   <a class="flex items-center justify-center w-10 h-10 bg-blue-600 rounded-full hover:bg-blue-400" href="https://www.linkedin.com/in/ninale65/"  target="_blank">
                     <i class="fa-brands fa-linkedin-in text-2xl" style="color: #ffffff;"></i>
