--- a/src/about.html
+++ b/src/about.html
@@ -3,8 +3,6 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="global.styles.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300..900&family=Syne:wght@400..800&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" rel="stylesheet">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -24,25 +22,27 @@
   <section class="flex flex-col md:flex-row py-8 px-4 md:px-8 gap-8 items-center">
     <!-- Right Image Section -->
     <div class="flex-auto">
-      <img src="/assets/profile.png" alt="Profile picture of Nina Le" 
-           class="rounded-2xl w-full">
+      <img src="/assets/profile.png" alt="Profile picture of Nina Le" class="rounded-2xl w-full">
     </div>
     <!-- Left Content Section -->
     <div class="flex flex-col gap-8 md:w-full">
       <div>
         <h1 class="pb-8">Nice to meet you!</h1>
         <h4>
-          I’m Nina Le (She/Her), a product designer and third-year design student at York University's Honours Bachelor of Design program 𖹭 
+          I’m Nina Le (She/Her), a uxui designer and third-year design student at York University's Honours Bachelor of Design program 𖹭 
           I’m passionate about creating thoughtful, inclusive solutions that optimize feasibility, viability, and desirability for current or future features. 
-          Whether working on UX/UI or experimental projects, I love diving into research and collaborating with cross-functional teams to craft experiences that cater to the user.
+          Whether working on uxui or experimental projects, I love diving into research and collaborating with cross-functional teams to craft experiences that cater to the user.
           <br><br>
           My attention to detail—shaped by years practicing music and illustration—fuels my approach to design. 
           Combined with my industry experience, this foundation drives my focus on accessibility, precision, and creating work that feels impactful.
         </h4>
       </div>
-      <button class="rounded-full px-16 pb-2 py-2 border-2 border-grey hover:bg-gray-100 transition m-full md:w-[700px]">
-        <h4>Open Resume</h4>
-      </button>
+      <a href="https://drive.google.com/file/d/15Vbiz09x6SVD2cTScr3ldKVGAPqeNlPY/view?usp=sharing" target="_blank">
+        <button class="rounded-full px-16 pb-2 py-2 border-2 border-grey hover:bg-gray-100 transition m-full md:w-[700px]">
+          <h4>Open Resume</h4>
+        </button>
+      </a>
+      
     </div>
   </section>
 
@@ -74,8 +74,8 @@
     
     <h2 class="pt-4">My Pursuits</h2>
       <h4 class="width">
-        - Outside of work, catch me lavishing in fancy things like afternoon tea, music boxes, ballet, aquariums, and lolita dresses<br>
-        - I am a mezzo-soprano singer, and I especially love singing to rock and alternative songs with heavy belts and strong choruses<br>
+        - Outside of work, catch me lavishing in fancy things like afternoon tea, music boxes, ballet, aquariums, and lolita dresses!<br>
+        - I am a mezzo-soprano singer, and I especially love singing to rock and alternative songs with heavy belts and strong choruses ૮ ˶ᵔ ᵕ ᵔ˶ ა<br>
         - I have an interest in pursuing many hobbies! I recently started coding with HTML, CSS/Tailwind, and some Javascript - I also been sculpting mini clay figurines (I sculpted the froggies)
       </h4>
     </section>
