--- a/src/index.html
+++ b/src/index.html
@@ -185,8 +185,8 @@
       <footer id="footer"></footer>
       <script type="module" src="main.js"></script>
       <script type="module" src="module.js"></script>
-      <script src="cursor.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
+      <script type="module" src="cursor.js"></script>
+      <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
 
   </body>
 </html>
