--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <script type="module" src="main.js"></script>
       <script type="module" src="module.js"></script>
       <script type="module" src="cursor.js"></script>
-      <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
+      <!-- <script type="module" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script> -->
 
   </body>
 </html>
