fix: removed assets suffix due to change in public directory

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <span class="cursor-text"></span>
         </div>
         <div class="cursor-follower"></div>
-        <a href="about.html"><img src="/assets/musi.png" class="hover-image w-auto h-48 lg:h-60" alt="Music Icon"></a>
+        <a href="about.html"><img src="musi.png" class="hover-image w-auto h-48 lg:h-60" alt="Music Icon"></a>
       </div>
 
 
