--- a/navbar.html
+++ b/navbar.html
@@ -16,7 +16,7 @@
       <nav class="py-6 px-4 md:px-8 flex justify-between items-center mx-auto h-24">
         <!-- Logo container -->
         <a class="text-2xl flex items-end" href="/">
-          <h2 class="whitespace-nowrap"><img src="/assets/name.svg" class="h-14 md:h-20"></h2>
+          <h2 class="whitespace-nowrap"><img src="name.svg" class="h-14 md:h-20"></h2>
         </a>
 
         <!-- Right-aligned nav links container -->
@@ -30,7 +30,7 @@
 
         <!-- Hamburger Icon for Mobile -->
         <div class="flex items-center gap-6 md:hidden">
-            <img onclick="onToggleMenu(this)" class="h-6 cursor-pointer" src="/assets/ham.svg" alt="Menu">
+            <img onclick="onToggleMenu(this)" class="h-6 cursor-pointer" src="ham.svg" alt="Menu">
         </div>
       </nav>
     </div>
