forbidden hack to make netlify bundle navbar.html and footer.html

--- a/index.html
+++ b/index.html
@@ -180,6 +180,9 @@
             </div>
           </a>
           
+          <!-- added to force netlify to bundle these files for deployment -->
+          <a href="navbar.html" class="hidden"></a>
+          <a href="footer.html" class="hidden"></a>
         </div>
       </section>
       <footer id="footer"></footer>
