--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
       <nav class="py-6 px-4 md:px-8 flex justify-between items-center mx-auto h-24"></nav>
     </div>
 </header>
-  
+  <!-- added to force netlify to bundle these files for deployment -->
+  <a href="navbar.html">hi</a>
+  <a href="footer.html">there</a>
   <section class="px-4 md:px-0 md:pl-12">
     <div class="flex flex-col md:pt-16 flex-1 pr-4 pb-8">
         <h5 class="font-extralight text-[120px] md:text-[160px]">Hi, I'm Nina</h5>
@@ -179,10 +181,6 @@
               <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
             </div>
           </a>
-          
-          <!-- added to force netlify to bundle these files for deployment -->
-          <a href="navbar.html" class="hidden"></a>
-          <a href="footer.html" class="hidden"></a>
         </div>
       </section>
       <footer id="footer"></footer>
