--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 </header>
   <section class="px-4 md:px-0 md:pl-12">
     <div class="flex flex-col md:pt-16 flex-1 pr-4 pb-8">
-        <h5 class="font-extralight text-[120px] md:text-[160px]">Hi, I'm Nina</h5>
+        <h5 class="font-light text-[60px] md:text-[80px]">Hi, I'm Nina</h5>
     </div>
     <div class="flex flex-col md:flex-row w-full justify-between pb-6">
       <div class="flex flex-col flex-1 md:py-0 gap-8">
