Fix: fonts - scaling fonts across global css to be smaller and more properationate

--- a/src/footer.html
+++ b/src/footer.html
@@ -12,7 +12,7 @@
   </head>
 <body>
     <footer class="normal-section py-2 border-black border-t flex items-center justify-between">
-        <p class="font-medium">©2024, Designed and Coded by Nina Le</p>
+        <h6 class="font-medium">©2024, Designed and Coded by Nina Le</h6>
         <div class="flex gap-3 justify-center items-center md:justify-end md:pr-6">
 
                   <a class="flex items-center justify-center w-10 h-10 bg-blue-600 rounded-full hover:bg-blue-400" href="https://www.linkedin.com/in/ninale65/"  target="_blank">
