--- a/src/index.html
+++ b/src/index.html
@@ -26,8 +26,8 @@
     </div>
     <div class="flex flex-col md:flex-row w-full justify-between pb-6">
       <div class="flex flex-col flex-1 md:py-0 gap-8">
-        <h3>As a uxui designer, I look for ways to make things just right while aligning design with real-world needs.</h3>
-        <h4>*When I'm not designing, I find inspiration in music, fashion, and the world around me! ʕ •̀ o •́ ʔ	</h4>
+        <h4 class="smolwidth">As a uxui designer, I look for ways to make things just right while aligning design with real-world needs.</h4>
+        <h6 class="smolwidth">// When I'm not designing, I'm inspired by music, fashion, and the world around me! ʕ •̀ o •́ ʔ</h6>
       </div>
       <div class="flex justify-end items-center">
         <!-- cursor -->
@@ -37,79 +37,77 @@
         <div class="cursor-follower"></div>
         <a href="about.html"><img src="musi.png" class="hover-image w-auto h-48 lg:h-60" alt="Music Icon"></a>
       </div>
-
-
     </div>
   </section>
 
 
 
 
-<section class="py-2 md:px-12 flex flex-col px-4 gap-3 border border-grey bg-blue-200 justify-center items-center">
-  <h2> TBD: all case studies are currently under construction! </h2>
+<section class="py-2 md:px-12 flex flex-col px-4 gap-3 border border-x-0 border-b-0 border-grey bg-blue-200 justify-center items-center">
+  <h4> All case studies are currently under construction! </h4>
 </section>
 
 
 
 
-<section class="carousel-container relative w-full py-2 pb-3 text-black border-black border overflow-hidden">
+<section class="carousel-container relative w-full py-2 pb-3 text-black border-black border overflow-hidden border-x-0">
   <div class="carousel flex items-center gap-3 animate-scroll whitespace-nowrap">
-    <h2>EXOMIS+DEVELOPMENT</h2>
-    <span><h2>3!@#%</h2></span>
-    <h2>YORK UNIVERSITY</h2>
-    <span><h2>4$#@!</h2></span>
-    <h2>WINGED CANVAS</h2>
-    <span><h2>?2&%</h2></span>
-    <h2>GOODSELF</h2>
-    <span><h2>*@&^#</h2></span>
+    <h3>EXOMIS+DEVELOPMENT</h3>
+    <span><h3>3!@#%</h3></span>
+    <h3>YORK UNIVERSITY</h3>
+    <span><h3>4$#@!</h3></span>
+    <h3>WINGED CANVAS</h3>
+    <span><h3>?2&%</h3></span>
+    <h3>GOODSELF</h3>
+    <span><h3>*@&^#</h3></span>
     <!-- Repeat content twice to create the illusion of infinite scroll -->
-    <h2>EXOMIS+DEVELOPMENT</h2>
-    <span><h2>3!@#%</h2></span>
-    <h2>YORK UNIVERSITY</h2>
-    <span><h2>4$#@!</h2></span>
-    <h2>WINGED CANVAS</h2>
-    <span><h2>?2&%</h2></span>
-    <h2>GOODSELF</h2>
-    <span><h2>*@&^#</h2></span>
-    <h2>EXOMIS+DEVELOPMENT</h2>
-    <span><h2>3!@#%</h2></span>
-    <h2>YORK UNIVERSITY</h2>
-    <span><h2>4$#@!</h2></span>
-    <h2>WINGED CANVAS</h2>
-    <span><h2>?2&%</h2></span>
-    <h2>GOODSELF</h2>
-    <span><h2>*@&^#</h2></span>
-    <h2>EXOMIS+DEVELOPMENT</h2>
-    <span><h2>3!@#%</h2></span>
-    <h2>YORK UNIVERSITY</h2>
-    <span><h2>4$#@!</h2></span>
-    <h2>WINGED CANVAS</h2>
-    <span><h2>?2&%</h2></span>
-    <h2>GOODSELF</h2>
-    <span><h2>*@&^#</h2></span>
+    <h3>EXOMIS+DEVELOPMENT</h3>
+    <span><h3>3!@#%</h3></span>
+    <h3>YORK UNIVERSITY</h3>
+    <span><h3>4$#@!</h3></span>
+    <h3>WINGED CANVAS</h3>
+    <span><h3>?2&%</h3></span>
+    <h3>GOODSELF</h3>
+    <span><h3>*@&^#</h3></span>
+    <h3>EXOMIS+DEVELOPMENT</h3>
+    <span><h3>3!@#%</h3></span>
+    <h3>YORK UNIVERSITY</h3>
+    <span><h3>4$#@!</h3></span>
+    <h3>WINGED CANVAS</h3>
+    <span><h3>?2&%</h3></span>
+    <h3>GOODSELF</h3>
+    <span><h3>*@&^#</h3></span>
+    <h3>EXOMIS+DEVELOPMENT</h3>
+    <span><h3>3!@#%</h3></span>
+    <h3>YORK UNIVERSITY</h3>
+    <span><h3>4$#@!</h3></span>
+    <h3>WINGED CANVAS</h3>
+    <span><h3>?2&%</h3></span>
+    <h3>GOODSELF</h3>
+    <span><h3>*@&^#</h3></span>
   </div>
 </section>
 
 
   <section class="pt-6">
       <div class="py-8 h1 pb-12 flex flex-col md:flex-row md:pr-16 gap-12 md:gap-20 px-4 md:px-0">
-          <div class="pb-2 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-blob grow-0 border">
-              <h1 class= " text-white text-center pb-1">uxui</h1>
+          <div class="pb-1 w-full md:w-28 rounded-full rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-blob grow-0 border">
+              <h2 class= " text-white text-center pb-1">uxui</h2>
           </div>
           <div class="grid grid-cols-none md:grid-cols-2 flex-1 cards-section">
           </div>
       </div>
       <div class="py-8 flex flex-col md:flex-row md:pr-12 gap-12 px-4 md:px-0">
-        <div class="w-full md:w-36 rounded-full pb-3 rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0  bg-lime-600 grow-0">
-            <h1 class="text-white text-center">motion</h1>
+        <div class="w-full md:w-36 rounded-full pb-2 rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0  bg-lime-600 grow-0">
+            <h2 class="text-white text-center">motion</h2>
         </div>
         <div class="grid grid-cols-1 md:grid-cols-2 flex-1 cards-section3">
         </div>
 
     </div>
       <div class="py-8 flex flex-col md:flex-row border-b border-grey md:pr-12 gap-12 px-4 md:px-0">
-          <div class="w-full md:w-36 rounded-full pb-3 rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#f30559] grow-0">
-              <h1 class="text-white text-center">design</h1>
+          <div class="w-full md:w-36 rounded-full pb-2 rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#f30559] grow-0">
+              <h2 class="text-white text-center">design</h2>
           </div>
           <div class="grid grid-cols-1 md:grid-cols-2 flex-1 cards-section2">
           </div>
@@ -120,27 +118,27 @@
 
 
 <section class="py-8 md:px-12 flex flex-col px-4 gap-3 border-b border-grey">
-  <h1>Recognition</h1>
+  <h3>Recognition</h3>
   <div class="flex flex-col md:flex-row border-b border-grey py-6 justify-between gap-4">
     <div class="details flex flex-col flex-1">
-      <p class="text-p">RGD Student Awards x 2</p>
-      <h4 class="text-h4">1st Place Tie-Winner in Forbes UX Design & Honourable Mention in Augmented Creativity</h4>
+      <p>RGD STUDENT AWARDS x 2</p>
+      <h4>1st Place Tie-Winner in Forbes UX Design & Honourable Mention in Augmented Creativity</h4>
     </div>
     <p>2023–2024</p>
   </div>
 
   <div class="flex flex-col md:flex-row border-b border-grey py-6 justify-between gap-4">
     <div class="details flex flex-col flex-1">
-      <p class="text-p">DubsTech & Design Buddies Protothon</p>
-      <h4 class="text-h4">3rd Place Winner in Gaming Track</h4>
+      <p>DUBSTECH & DESIGN BUDDIES PROTOTHON</p>
+      <h4>3rd Place Winner in the UX Gaming Track</h4>
     </div>
     <p>2023–2024</p>
   </div>
 
   <div class="flex flex-col md:flex-row py-6 justify-between gap-4">
     <div class="details flex flex-col flex-1">
-      <p class="text-p">DSA Winter DESN'athon @ York University</p>
-      <h4 class="text-h4">2nd Place Winner in designing for Student Empowerment</h4>
+      <p>DSA WINTER DESN'ATHON @ YORK UNIVERSITY</p>
+      <h4>2nd Place Winner in designing a mobile for Student Empowerment</h4>
     </div>
     <p>2023–2024</p>
   </div>
@@ -149,21 +147,21 @@
 
       <section class="flex flex-col md:flex-row py-6 md:py-12 gap-6 flex-1">
         <div class="flex flex-col gap-9 px-4 md:px-12">
-            <h1>Let's Chat</h1>
+            <h3>Let's Chat</h3>
             <h4>See something that caught your eye? I’d be happy to collaborate and discuss new opportunities together!</h4>
         </div>
         <div class="w-full">
 
           <a href="https://drive.google.com/file/d/15Vbiz09x6SVD2cTScr3ldKVGAPqeNlPY/view?usp=sharing" target="_blank">
             <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
-              <h4>Resume</h4>
+              <h6>Resume</h6>
               <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
             </div>
           </a>
 
           <a href="about.html">
             <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
-              <h4>About</h4>
+              <h6>About</h6>
               <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
               <span class="cursor-text">About me</span>
             </div>
@@ -171,10 +169,9 @@
 
           <!-- Add the hover-image class to other elements as well -->
 
-
           <a href="archive.html">
             <div class="p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
-              <h4>Archive</h4>
+              <h6>Archive</h6>
               <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
             </div>
           </a>
