more font changess (esp to about) and changed about profile image res

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,12 @@
       <nav class="py-6 px-4 md:px-8 flex justify-between items-center mx-auto h-24"></nav>
     </div>
 </header>
-  <section class="px-4 md:px-0 md:pl-12">
-    <div class="flex flex-col md:pt-16 flex-1 pr-4 pb-8">
+<div class="cursor">
+  <span class="cursor-text"></span>
+</div>
+<div class="cursor-follower"></div>
+  <section class="px-4 md:px-0 md:pl-16">
+    <div class="flex flex-col pt-12 md:pt-16 flex-1 pr-4 pb-8">
         <h5 class="font-light text-[60px] md:text-[80px]">Hi, I'm Nina</h5>
     </div>
     <div class="flex flex-col md:flex-row w-full justify-between pb-6">
@@ -29,12 +33,7 @@
         <h4 class="smolwidth">As a uxui designer, I look for ways to make things just right while aligning design with real-world needs.</h4>
         <h6 class="smolwidth">// When I'm not designing, I'm inspired by music, fashion, and the world around me! ʕ •̀ o •́ ʔ</h6>
       </div>
-      <div class="flex justify-end items-center">
-        <!-- cursor -->
-        <div class="cursor">
-          <span class="cursor-text"></span>
-        </div>
-        <div class="cursor-follower"></div>
+      <div class="justify-end items-center pr-16">
         <a href="about.html"><img src="musi.png" class="hover-image w-auto h-48 lg:h-60" alt="Music Icon"></a>
       </div>
     </div>
@@ -117,7 +116,7 @@
 
 
 
-<section class="py-8 md:px-12 flex flex-col px-4 gap-3 border-b border-grey">
+<section class="py-12 md:px-16 flex flex-col px-4 gap-3 border-b border-grey">
   <h3>Recognition</h3>
   <div class="flex flex-col md:flex-row border-b border-grey py-6 justify-between gap-4">
     <div class="details flex flex-col flex-1">
@@ -145,8 +144,8 @@
 
 </section>
 
-      <section class="flex flex-col md:flex-row py-6 md:py-12 gap-6 flex-1">
-        <div class="flex flex-col gap-9 px-4 md:px-12">
+      <section class="flex flex-col md:flex-row pt-6 md:py-16 gap-6 flex-1">
+        <div class="flex flex-col gap-9 px-4 md:px-16">
             <h3>Let's Chat</h3>
             <h4>See something that caught your eye? I’d be happy to collaborate and discuss new opportunities together!</h4>
         </div>
