--- a/src/about.html
+++ b/src/about.html
@@ -19,23 +19,23 @@
   <div class="cursor"></div>
   <div class="cursor-follower"></div>
 
-  <section class="flex flex-col md:flex-row py-8 px-4 md:px-8 gap-8 items-center">
+  <section class="flex flex-col md:flex-row py-8 px-4 md:px-16 gap-8 items-center">
     <!-- Right Image Section -->
     <div class="flex-auto">
-      <img src="profile.png" alt="Profile picture of Nina Le" class="rounded-2xl w-full">
+      <img src="profile.jpg" alt="Profile picture of Nina Le" class="rounded-2xl h-full w-auto">
     </div>
     <!-- Left Content Section -->
-    <div class="flex flex-col gap-8 md:w-full">
+    <div class="flex flex-col gap-16 md:w-full">
       <div>
-        <h1 class="pb-8">Nice to meet you!</h1>
-        <h4>
+        <h3 class="pb-8">Nice to meet you!</h3>
+        <h6>
           I’m Nina Le (She/Her), a uxui designer and third-year design student at York University's Honours Bachelor of Design program 𖹭 
           I’m passionate about creating thoughtful, inclusive solutions that optimize feasibility, viability, and desirability for current or future features. 
           Whether working on uxui or experimental projects, I love diving into research and collaborating with cross-functional teams to craft experiences that cater to the user.
           <br><br>
           My attention to detail—shaped by years practicing music and illustration—fuels my approach to design. 
           Combined with my industry experience, this foundation drives my focus on accessibility, precision, and creating work that feels impactful.
-        </h4>
+        </h6>
       </div>
       <a href="https://drive.google.com/file/d/15Vbiz09x6SVD2cTScr3ldKVGAPqeNlPY/view?usp=sharing" target="_blank">
         <button class="w-full rounded-full px-16 pb-2 py-2 border-2 border-grey hover:bg-gray-100 transition m-full md:w-[700px]">
@@ -48,7 +48,7 @@
 
   
 
-  <section class="flex flex-col py-8 px-4 md:px-8 gap-3 border-t border-grey">
+  <section class="flex flex-col py-8 px-4 md:px-16 gap-3 border-t border-grey">
     
     <div class="grid grid-cols-2 gap-4 items-center md:flex md:gap-4">
       <!-- Wrapper for the first image -->
@@ -72,40 +72,40 @@
       </div>
     </div>
     
-    <h2 class="pt-4">My Pursuits</h2>
-      <h4 class="width">
+    <h3 class="pt-4">My Pursuits</h3>
+      <h6 class="width">
         - Outside of work, catch me lavishing in fancy things like afternoon tea, music boxes, ballet, aquariums, and lolita dresses!<br>
         - I am a mezzo-soprano singer, and I especially love singing to rock and alternative songs with heavy belts and strong choruses ૮ ˶ᵔ ᵕ ᵔ˶ ა<br>
         - I have an interest in pursuing many hobbies! I recently started coding with HTML, CSS/Tailwind, and some Javascript - I also been sculpting mini clay figurines (I sculpted the froggies)
-      </h4>
+      </h6>
     </section>
 
   
-  <section class="flex flex-col md:flex-row px-4 md:px-8 gap-8 border-t border-grey pb-12">
+  <section class="flex flex-col md:flex-row px-4 md:px-16 gap-8 border-t border-grey pb-12">
 
     <!-- Right Content Section -->
     <div class="flex flex-col gap-8 py-8 justify-center">
       <div class>
-        <h2 class="pb-6">My Design Values</h2>
-        <h3>Responsible Design</h3>
-        <h4>
+        <h3 class="pb-6">My Design Values</h3>
+        <h4>Responsible Design</h4>
+        <h6>
           Applying human-centered design principles to decision-making. Ensuring solutions are ethical, 
           inclusive, and considerate of their impact on all stakeholders.
-        </h4>
+        </h6>
       </div>
       <div>
-        <h3>Play Where Needed</h3>
-        <h4>
+        <h4>Play Where Needed</h4>
+        <h6>
           Crafting designs that balance delight and usability. Aligning with trends without compromising the functionality or user flow.
-        </h4>
+        </h6>
       </div>
       <div>
-        <h3>Precision and Infrastructure</h3>
-        <h4>
+        <h4>Precision and Infrastructure</h4>
+        <h6>
           Combining micro-interactions, hierarchy, and attention to detail so experiences feel effortless yet intentional, while
           focusing on your iterations to ensure designs are grounded from research and user feedback to deliver the best results. Prioritizing accessibility, equity, 
           and sustainability while aligning with broader business goals.
-        </h4>
+        </h6>
       </div>
     </div>
        <!-- Left Content Section -->
