fix: added the nav bar comp :0 !! its's working now and gots the styles but desperately needs mobile toggles to work

--- a/src/about.html
+++ b/src/about.html
@@ -10,11 +10,8 @@
         <title>Nina's Folio</title>
     </head>
 <body>
-  <header id="navbar">
-    <div class="border-b border-grey">
-      <nav class="py-6 px-4 md:px-8 flex justify-between items-center mx-auto h-24"></nav>
-    </div>
-  </header>
+  <script src="header.js"></script> <!-- where header.js is the name of our reusable component script -->
+<header-component></header-component>
 
   <div class="cursor"></div>
   <div class="cursor-follower"></div>
