--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,13 @@
 
 
 
-
-
-
 <body>
-  <header id="navbar">
-    <div class="border-b border-grey">
-      <nav class="py-6 px-4 md:px-8 flex justify-between items-center mx-auto h-24"></nav>
-    </div>
-</header>
+  <script src="header.js"></script> <!-- where header.js is the name of our reusable component script -->
+<header-component></header-component>
+
+
+
+
 <div class="cursor">
   <span class="cursor-text"></span>
 </div>
@@ -177,6 +175,7 @@
         </div>
       </section>
       <footer id="footer"></footer>
+    
       <script type="module" src="main.js"></script>
       <script type="module" src="module.js"></script>
       <script type="module" src="cursor.js"></script>
