structure - home: banner moving to bottom. adding the sticky header, and the top padding to home/about. changing the All case studies are currently under construction styling

--- a/src/index.html
+++ b/src/index.html
@@ -23,27 +23,19 @@
 </div>
 <div class="cursor-follower"></div>
   <section class="px-4 md:px-0 md:pl-16">
-    <div class="flex flex-col pt-12 md:pt-16 flex-1 pr-4 pb-8">
+    <div class="flex flex-col pt-12 md:pt-48 flex-1 pr-4 pb-8">
         <h5 class="font-light text-[60px] md:text-[80px]">Hi, I'm Nina</h5>
     </div>
     <div class="flex flex-col md:flex-row w-full justify-between pb-6">
       <div class="flex flex-col flex-1 md:py-0 gap-8">
-        <h4 class="smolwidth">As a uxui designer, I look for ways to make things just right while aligning design with real-world needs.</h4>
-        <h6 class="smolwidth">// When I'm not designing, I'm inspired by music, fashion, and the world around me! ʕ •̀ o •́ ʔ</h6>
+        <h4 class="smolwidth">As a uxui designer, I look for ways to make things just right while aligning design with real-world needs</h4>
+        <h6 class="smolwidth">* When I'm not designing, I'm inspired by music, fashion, and the world around me „• ֊ •„</h6>
       </div>
       <div class="justify-end items-center pr-16">
         <a href="about.html"><img src="musi.png" class="hover-image w-auto h-48 lg:h-60" alt="Music Icon"></a>
       </div>
     </div>
   </section>
-
-
-
-
-<section class="py-2 md:px-12 flex flex-col px-4 gap-3 border border-x-0 border-b-0 border-grey bg-blue-200 justify-center items-center">
-  <h4> All case studies are currently under construction! </h4>
-</section>
-
 
 
 
@@ -102,7 +94,7 @@
         </div>
 
     </div>
-      <div class="py-8 flex flex-col md:flex-row border-b border-grey md:pr-12 gap-12 px-4 md:px-0">
+      <div class="py-8 flex flex-col md:flex-row md:pr-12 gap-12 px-4 md:px-0">
           <div class="w-full md:w-36 rounded-full pb-2 rounded-tl-none h-12 md:h-16 flex items-center justify-center md:sticky top-0 bg-[#f30559] grow-0">
               <h2 class="text-white text-center">design</h2>
           </div>
@@ -111,6 +103,7 @@
       </div>
 
 </section>
+
 
 
 
@@ -145,7 +138,7 @@
       <section class="flex flex-col md:flex-row pt-6 md:py-16 gap-6 flex-1">
         <div class="flex flex-col gap-9 px-4 md:px-16">
             <h3>Let's Chat</h3>
-            <h4>See something that caught your eye? I’d be happy to collaborate and discuss new opportunities together!</h4>
+            <h4>See something that caught your eye? I’d be happy to collaborate and discuss new opportunities together</h4>
         </div>
         <div class="w-full">
 
@@ -174,6 +167,12 @@
           </a>
         </div>
       </section>
+      
+
+<section class="py-2 md:px-16 flex flex-col gap-3 bg-gray-950 text-white">
+  <h6> ♫•*¨*•.¸¸♪ All case studies are currently under construction ⁽⁽◝( • ω • )◜⁾⁾	</h6>
+</section>
+
       <footer id="footer"></footer>
     
       <script type="module" src="main.js"></script>
