--- a/src/about.html
+++ b/src/about.html
@@ -16,7 +16,7 @@
   <div class="cursor"></div>
   <div class="cursor-follower"></div>
 
-  <section class="flex flex-col md:flex-row py-8 px-4 md:px-16 gap-8 items-center">
+  <section class="flex flex-col md:flex-row py-8 px-4 md:px-16 gap-8 items-center pt-32">
     <!-- Right Image Section -->
     <div class="flex-auto">
       <img src="profile.jpg" alt="Profile picture of Nina Le" class="rounded-2xl h-full w-auto">
@@ -78,7 +78,7 @@
     </section>
 
   
-  <section class="flex flex-col md:flex-row px-4 md:px-16 gap-8 border-t border-grey pb-12">
+  <section class="flex flex-col md:flex-row px-4 md:px-16 gap-8 border-grey pb-12">
 
     <!-- Right Content Section -->
     <div class="flex flex-col gap-8 py-8 justify-center">
