--- a/src/footer.html
+++ b/src/footer.html
@@ -22,7 +22,7 @@
                 <a class="flex items-center justify-center w-10 h-10 bg-[#f30559] hover:bg-pink-400 rounded-full"  href="https://www.instagram.com/ninmedias/"  target="_blank">
                   <i class="fa-brands fa-instagram text-2xl" style="color: #ffffff;"></i>
             </a>
-                <a class="flex items-center justify-center w-10 h-10 bg-grey hover:bg-slate-500 rounded-full" href="https://www.behance.net/ninale1" target="_blank">
+                <a class="flex items-center justify-center w-10 h-10 bg-gray-950 hover:bg-slate-500 rounded-full" href="https://www.behance.net/ninale1" target="_blank">
                     <i class="fa-brands fa-behance text-2xl" style="color: #ffffff;"></i>
                 </a>   
                 <span class="flex items-center justify-center w-10 h-10 bg-teal-600 hover:bg-teal-400 rounded-full">
