i got the header's interactions to WORK YIPPEEEE - toggle and no scroll on mobile

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 <div class="cursor-follower"></div>
   <section class="px-4 md:px-0 md:pl-16">
     <div class="flex flex-col pt-12 md:pt-48 flex-1 pr-4 pb-8">
-        <h5 class="font-light text-[60px] md:text-[80px]">Hi, I'm Nina</h5>
+        <h5 class="font-light text-[60px] md:text-[80px] typing">Hi, I'm Nina</h5>
     </div>
     <div class="flex flex-col md:flex-row w-full justify-between pb-6">
       <div class="flex flex-col flex-1 md:py-0 gap-8">
@@ -107,7 +107,7 @@
 
 
 
-<section class="py-12 md:px-16 flex flex-col px-4 gap-3 border-b border-grey">
+<section class="py-12 md:px-16 flex flex-col px-4 gap-3 border-y border-grey">
   <h3>Recognition</h3>
   <div class="flex flex-col md:flex-row border-b border-grey py-6 justify-between gap-4">
     <div class="details flex flex-col flex-1">
@@ -135,7 +135,7 @@
 
 </section>
 
-      <section class="flex flex-col md:flex-row pt-6 md:py-16 gap-6 flex-1">
+      <section class="flex flex-col md:flex-row pt-6 md:py-12 gap-6 flex-1">
         <div class="flex flex-col gap-9 px-4 md:px-16">
             <h3>Let's Chat</h3>
             <h4>See something that caught your eye? I’d be happy to collaborate and discuss new opportunities together</h4>
