smaller home cards on mobile. music png not visible on mobile any more

--- a/src/index.html
+++ b/src/index.html
@@ -22,22 +22,23 @@
   <span class="cursor-text"></span>
 </div>
 <div class="cursor-follower"></div>
-<section class="px-4 md:px-0 md:pl-16">
-  <div class="flex flex-col pt-6 md:pt-48 flex-1 pr-4 pb-8">
+<section class="px-4 md:px-0 md:pl-16 pb-8 sm:0">
+  <div class="flex flex-col pt-4 md:pt-48 flex-1 pr-4 md:pb-8">
     <h5 class="font-light text-[60px] md:text-[80px] typing">Hi, I'm Nina</h5>
   </div>
-  <div class="flex flex-col md:flex-row w-full justify-between pb-6">
-    <div class="flex flex-col flex-1 md:py-0 gap-8">
+  <div class="flex flex-col md:flex-row w-full justify-between md:pb-6">
+    <div class="flex flex-col flex-1 md:py-0 gap-6 md:gap-8">
       <h4 class="smolwidth">As a uxui designer, I look for ways to make things just right while aligning design with real-world needs</h4>
       <h6 class="smolwidth">* When I'm not designing, I'm inspired by music, fashion, and the world around me „• ֊ •„</h6>
     </div>
-    <div class="justify-end items-center pr-16">
+    <div class="justify-end items-center md:pr-16">
       <a href="about.html">
         <img 
-          src="musi.png" 
-          class="hover-image w-auto h-64" 
-          style="object-fit: contain;" 
-          alt="Music Icon">
+        src="musi.png" 
+        class="hover-image hidden md:block md:h-40 lg:h-60 w-auto" 
+        alt="Music Icon"
+      >
+      
       </a>
     </div>
   </div>
