Adding the here:after page, contents and adding animations to the back button, a bit of layout too

--- a/src/about.html
+++ b/src/about.html
@@ -43,7 +43,7 @@
         </h6>
       </div>
       <a href="https://drive.google.com/file/d/15Vbiz09x6SVD2cTScr3ldKVGAPqeNlPY/view?usp=sharing" target="_blank">
-        <button class="w-full rounded-full px-16 pb-2 py-2 border-2 border-grey hover:bg-teal-50 transition m-full md:w-[700px]">
+        <button class="w-full rounded-full px-16 pb-2 py-2 border-2 border-grey hover:bg-teal-50 transition m-full md:max-w-[700px]">
           <h4>Open Resume</h4>
         </button>
       </a>
@@ -137,7 +137,7 @@
     </section>
 
 
-    <section class="flex flex-col md:flex-row pt-8 md:pt-12 md:pb-6 border-t border-grey gap-6 flex-1 bg-[#ECF4FF]">
+    <section class="flex flex-col md:flex-row pt-8 md:pt-12 md:pb-6 border-t border-grey gap-6 flex-1">
       <div class="flex flex-col gap-9 px-4 md:px-16">
           <h3>Let's Chat</h3>
           <h4>See something that caught your eye? I’d be happy to collaborate and discuss new opportunities together</h4>
