--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
 <section class="px-4 py-4 md:px-16 flex flex-col justify-center items-center md:items-start gap-3 bg-gray-950 text-white">
   <p>All case studies are currently under construction ⁽⁽◝( • ω • )◜⁾⁾	</p>
 </section>
-      <section class="flex flex-col md:flex-row pt-8 md:pt-12 md:pb-6 gap-6 flex-1 bg-[#ECF4FF]">
+      <section class="flex flex-col md:flex-row pt-8 md:pt-12 md:pb-6 gap-6 flex-1">
         <div class="flex flex-col gap-9 px-4 md:px-16">
             <h3>Let's Chat</h3>
             <h4>See something that caught your eye? I’d be happy to collaborate and discuss new opportunities together</h4>
