--- a/src/archive.html
+++ b/src/archive.html
@@ -50,7 +50,7 @@
 
       
 
-    <section class="flex flex-col md:flex-row pt-8 md:pt-12 md:pb-6 border-t border-grey gap-6 flex-1 bg-[#ECF4FF]">
+    <section class="flex flex-col md:flex-row pt-8 md:pt-12 md:pb-6 border-t border-grey gap-6 flex-1">
       <div class="flex flex-col gap-9 px-4 md:px-16">
           <h3>Let's Chat</h3>
           <h4>See something that caught your eye? I’d be happy to collaborate and discuss new opportunities together</h4>
