responsive - image in profile and heading lg paddings

--- a/src/about.html
+++ b/src/about.html
@@ -24,16 +24,19 @@
 </div>
 <div class="cursor-follower"></div>
 
-  <section class="flex flex-col md:flex-row py-8 md:py-20 px-4 md:px-16 gap-8 md:gap-16 items-center pt-8 md:pt-40">
+  <section class="flex flex-col lg:flex-row py-8 md:py-20 px-4 md:px-16 gap-8 md:gap-16 items-center pt-8 md:pt-40">
     <!-- Right Image Section -->
-    <div class="flex-auto">
-      <img src="profile.jpg" alt="Profile picture of Nina Le" class="rounded-2xl max-w-[400px] h-auto object-contain">
+    <div class="flex-auto w-full lg:w-auto">
+      <img src="profile.jpg" 
+           alt="Profile picture of Nina Le" 
+           class="rounded-2xl w-full h-[400px] lg:h-auto lg:w-full object-cover">
     </div>
+    
     <!-- Left Content Section -->
     <div class="flex flex-col gap-16 md:w-full">
       <div>
         <h3 class="pb-4">Nice to meet you!</h3>
-        <h6 class="md:max-w-[600px]">
+        <h6 class="md:max-w-[600px] lg:max-w-[800px]">
           I’m Nina Le (She/Her), a uxui designer and third-year design student at York University's Honours Bachelor of Design program 𖹭 
           I’m passionate about creating thoughtful, inclusive solutions that optimize feasibility, viability, and desirability for current or future features. 
           Whether working on uxui or experimental projects, I love diving into research and collaborating with cross-functional teams to craft experiences that cater to the user.
