Cursor - bottom footers - adding projects!

--- a/src/about.html
+++ b/src/about.html
@@ -154,11 +154,11 @@
           </div>
         </a>
 
-        <a href="about.html">
+        <a href="index.html">
           <div class="border-b border-grey p-4 pr-3 md:pr-12 flex items-center justify-between hover:text-blob duration-500 cursor-pointer hover-image">
-            <h6>About</h6>
+            <h6>Projects</h6>
             <span class="material-symbols-outlined text-xl"><h2 class="font-thin">trending_flat</h2></span>
-            <span class="cursor-text">About me</span>
+            <span class="cursor-text">Projects</span>
           </div>
         </a>
 
